fix: a11y color contrast

--- a/css/_rotating-text.scss
+++ b/css/_rotating-text.scss
@@ -9,6 +9,7 @@
     display: inline-flex;
     margin: 0;
     vertical-align: top;
+    font-weight: bold;
 
     .word {
       position: absolute;
@@ -47,7 +48,8 @@
 }
 
 .emerald {
-  color: #2ecc71;
+  //color: #2ecc71;
+  color: #25A75D;
 }
 
 
@@ -56,7 +58,8 @@
 }
 
 .sun-flower {
-  color: #f1c40f;
+  //color: #f1c40f;
+  color: #AF920E;
 }
 
 
